--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,9 @@
-.App {
-  text-align: center;
-}
+.actionButton {background-color:#e14013;}
+/* style={{backgroundColor:"#e14013" , color:"#FFF"}} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.MuiStepIcon-root.MuiStepIcon-completed,
+.MuiStepIcon-root.MuiStepIcon-active{color:#e14013!important;}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+#transparentBackground{background:#f9c9bb!important;}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
