--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,8 @@ p {
   -moz-box-shadow: 0px 0px 12px 0px rgba(225, 64, 19, 1);
   box-shadow: 0px 0px 12px 0px rgba(225, 64, 19, 1);
 }
+
+.slick-prev:before,
+.slick-next:before {
+  color: #333 !important;
+}
